fix overflow

--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@ html {
 
 .landing-page {
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
     border: 1px solid white;
     background: linear-gradient(220deg, rgba(255, 255, 0, 0.4), rgba(255,255,255,0.5) 10%),
-            linear-gradient(180deg, rgba(255,255,0, 0.4), rgba(255,255,255,1) 70%)
+            linear-gradient(180deg, rgba(255,255,0, 0.4), rgba(255,255,255,1) 70%);
+    overflow: hidden;
 
 }
 
